--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                 <div class="header-nav">
                     <ul class="header-nav-list">
                         <li class="header-nav-item"><a href="" class="header-nav-item-link">Trang Chủ</a></li>
-                        <li class="header-nav-item"><a href="" class="header-nav-item-link">Chương Trình Học </a></li>
-                        <li class="header-nav-item"><a href="" class="header-nav-item-link">Tuyển Sinh</a></li>
+                        <li class="header-nav-item"><a href="./chuongtrinhhoc.html" class="header-nav-item-link">Chương Trình Học </a></li>
+                        <li class="header-nav-item"><a href="./tuyensinh.html" class="header-nav-item-link">Tuyển Sinh</a></li>
                         <li class="header-nav-item"><a href="" class="header-nav-item-link">Liên hệ-Hỗ Trợ</a></li>
                     </ul>
                 </div>
