--- a/tuyensinh.html
+++ b/tuyensinh.html
@@ -69,7 +69,7 @@
                 TRẢI NGHIỆM HỌC TẬP ĐƯỢC THIẾT KẾ CHO TƯƠNG LAI
             </h2>
             <div class="experience-content">
-                Được phát triển bởi các chuyên gia hàng đầu thế giới của Nord Anglia, chương trình giảng dạy được công nhận toàn cầu tại BVIS khiến việc học trở nên thật sư khác biệt nhờ sáu thế mạnh giáo dục.
+                Được phát triển bởi các chuyên gia hàng đầu thế giới của Nord Anglia, chương trình giảng dạy được công nhận toàn cầu tại ISHCMC khiến việc học trở nên thật sư khác biệt nhờ sáu thế mạnh giáo dục.
             </div>
         </div>
         <div class="experience-list">
@@ -82,7 +82,7 @@
                         ĐỘI NGŨ GIÁO VIÊN HÀNG ĐẦU
                     </div>
                     <div class="experience-item-desc">
-                        Giáo viên hàng đầu tạo nên ngôi trường đẳng cấp. Đó là lý do BVIS tâm huyết tuyển dụng những nhà giáo giỏi và nhiệt huyết, nhằm đảm bảo học sinh học tập và đạt được nhiều thành công hơn mong đợi.
+                        Giáo viên hàng đầu tạo nên ngôi trường đẳng cấp. Đó là lý do ISHCMC tâm huyết tuyển dụng những nhà giáo giỏi và nhiệt huyết, nhằm đảm bảo học sinh học tập và đạt được nhiều thành công hơn mong đợi.
                     </div>
                 </div>
                 <a href="" class="experience-item-more">
@@ -116,7 +116,7 @@
                         TRẢI NGHIỆM HỌC TẬP VƯỢT TRỘI
                     </div>
                     <div class="experience-item-desc">
-                        Tại BVIS, học tập không chỉ diễn ra trong phạm vi lớp học. Học sinh được trao cơ hội phát triển sự tự tin, tinh thần đồng đội và tính bền bỉ trong những trải nghiệm quy mô quốc tế.
+                        Tại ISHCMC, học tập không chỉ diễn ra trong phạm vi lớp học. Học sinh được trao cơ hội phát triển sự tự tin, tinh thần đồng đội và tính bền bỉ trong những trải nghiệm quy mô quốc tế.
                     </div>
                 </div>
                 <a href="" class="experience-item-more">
@@ -147,7 +147,7 @@
                         <img src="./assets/img/tuyensinh/ex-item/ex-6.jpg" alt="">
                     </div>
                     <div class="experience-item-title">
-                        MỤC TIÊU XÃ HỘI TẠI BVIS 
+                        MỤC TIÊU XÃ HỘI TẠI ISHCMC 
                     </div>
                     <div class="experience-item-desc">
                         Nhà trường giáo dục học sinh tạo nên sự khác biệt tích cực cho thế giới mà các em đang sống nhờ việc phát huy thế mạnh và tài năng của bản thân.
@@ -167,7 +167,7 @@
                         CHẤT LƯỢNG GIẢNG DẠY ƯU VIỆT
                     </div>
                     <div class="experience-item-desc">
-                        Phương pháp học tập được cá nhân hóa cao tại BVIS giúp học sinh đạt được các kết quả ấn tượng. Từ đó tự tin chinh phục các trường đại học hàng đầu thế giới.
+                        Phương pháp học tập được cá nhân hóa cao tại ISHCMC giúp học sinh đạt được các kết quả ấn tượng. Từ đó tự tin chinh phục các trường đại học hàng đầu thế giới.
                     </div>
                 </div>
                 <a href="" class="experience-item-more">
@@ -178,19 +178,146 @@
         </div>
     </section>
 
+    <section class="video">
+        <iframe width="80%" height="500" src="https://www.youtube.com/embed/EYn8GRqujiU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </section>
+
+    <section class="process flex">
+        <div class="process-left">
+            <img src="https://www.vas.edu.vn/storage/media/webp/large/UBXlvZSI7bmgkEoZ0eGb9hi1JFp4YqlUdEclekFC.webp" alt="">
+        </div>
+        <div class="process-right">
+            <div class="process-title">
+                Quy trình tuyển sinh
+            </div>
+            <div class="process-desc">
+                Các bậc phụ huynh và các em học sinh trung học phổ thông sẽ trải qua ba giai đoạn căn bản để hoàn tất quy trình tuyển sinh tại Trường Quốc tế Sài Gòn  như sau:
+            </div>
+            <div class="process-list">
+                <li><i class="fa-solid fa-circle-check"></i>Đăng ký dự tuyển</li>
+                <li><i class="fa-solid fa-circle-check"></i>Kiểm tra kiến thức và năng lực đầu vào</li>
+                <li><i class="fa-solid fa-circle-check"></i>Hoàn tất hồ sơ nhập học</li>
+            </div>
+            <div class="tabs">
+
+            </div>
+        </div>
+    </section>
+
     <section class="question">
         <div class="question-title">
             <h2>CÂU HỎI</h2>
         </div>
         <div class="question-list">
             <div class="question-item">
-                <div class="question-item-title">
+                <div class="question-item-title flex">
                     <span class="question-item-left">
                         Con tôi có đủ khả năng theo kịp học chương trình giảng dạy nếu nhập học từ giữa năm không?
                     </span>
-                    <span class=" question -item-right experience-item-more-icon"><i class="fa-solid fa-plus"></i></span>
+                    <span class=" question-item-right"><i class="fa-solid fa-chevron-down"></i></span>
+                </div>
+
+                <div class="question-item-answer">
+                    Vâng, hoàn toàn được. ISHCMC mang đến cho mỗi học sinh một chương trình học tập được cá nhân hóa, được thiết kế để hỗ trợ các em chuẩn bị cho các kỳ thi IGCSE năm 16 tuổi. Ngoài ra, nhà trường còn có các bộ phận Hỗ trợ tiếng Anh (EAL) và Hỗ trợ tiếng Việt (VAL) cho những em học sinh có nhu cầu.
                 </div>
             </div>
+            <div class="question-item">
+                <div class="question-item-title flex">
+                    <span class="question-item-left">
+                        Con tôi đang học ở một trường Việt Nam không dạy tiếng Anh thì có được chấp nhận không?
+                    </span>
+                    <span class=" question-item-right"><i class="fa-solid fa-chevron-down"></i></span>
+                </div>
+
+                <div class="question-item-answer">
+                    Việc xếp lớp cho học sinh sẽ phụ thuộc vào độ tuổi, kết quả kiểm tra và báo cáo kết quả học tập của em. Các em ở độ tuổi lớn hơn thường cần trình độ tiếng Anh cao hơn do yêu cầu từ chương trình học. Đội ngũ giáo viên Hỗ trợ ngôn ngữ Tiếng Anh xuất sắc của nhà trường có thể giúp các em trong trường hợp em gặp một số khó khăn ban đầu. Nhà trường luôn hướng đến sự thành công và tiến bộ vượt bậc của từng em học sinh, dù các em có xuất phát điểm hoặc những trải nghiệm trước đó như thế nào.
+                </div>
+            </div>
+            <div class="question-item">
+                <div class="question-item-title flex">
+                    <span class="question-item-left">
+                        Phí đặt cọc để làm gì?
+                    </span>
+                    <span class=" question-item-right"><i class="fa-solid fa-chevron-down"></i></span>
+                </div>
+
+                <div class="question-item-answer">
+                    Quy trình tuyển sinh tại ISHCMC bắt đầu vào tháng 10, đây cũng chính là lúc nhà trường tuyển dụng đội ngũ giáo viên quốc tế tốt nhất cho năm học tiếp theo. Xuất phát điểm của kế hoạch tài chính bắt đầu từ khá sớm để chuẩn bị cho đội ngũ giảng dạy, vì vậy nhà trường cần nhận được sự cam kết từ phía gia đình. Trong trường hợp quý phụ huynh thông báo khá gấp khi xin cho con thôi học tại trường, khoản phí đặt cọc của quý vị sẽ bù vào các chi phí phát sinh trong quá trình tuyển dụng. Phương thức sử dụng khoản phí đặt cọc là yêu cầu tiêu chuẩn tại các trường quốc tế cao cấp trên toàn thế giới.
+                </div>
+            </div>
+            <div class="question-item">
+                <div class="question-item-title flex">
+                    <span class="question-item-left">
+                        Con tôi có đủ khả năng theo kịp học chương trình giảng dạy nếu nhập học từ giữa năm không?
+                    </span>
+                    <span class=" question-item-right"><i class="fa-solid fa-chevron-down"></i></span>
+                </div>
+
+                <div class="question-item-answer">
+                    Vâng, hoàn toàn được. I mang đến cho mỗi học sinh một chương trình học tập được cá nhân hóa, được thiết kế để hỗ trợ các em chuẩn bị cho các kỳ thi IGCSE năm 16 tuổi. Ngoài ra, nhà trường còn có các bộ phận Hỗ trợ tiếng Anh (EAL) và Hỗ trợ tiếng Việt (VAL) cho những em học sinh có nhu cầu.
+                </div>
+            </div>
+            <div class="question-item">
+                <div class="question-item-title flex">
+                    <span class="question-item-left">
+                        Trường giảng dạy theo giáo trình của Anh hay Việt Nam?
+                    </span>
+                    <span class=" question-item-right"><i class="fa-solid fa-chevron-down"></i></span>
+                </div>
+
+                <div class="question-item-answer">
+                    I là một trong những trường hàng đầu tại Việt Nam, và chúng tôi luôn trân trọng đặc quyền được giảng dạy Chương trình Quốc gia của Anh trong một môi trường song ngữ. Nhà trường áp dụng chương trình giảng dạy này làm khung Chương trình tiêu chuẩn để đảm bảo mỗi học sinh đều nhận được chất lượng giáo dục chuẩn quốc tế mà vẫn duy trì được đặc trưng bản sắc Việt Nam.
+                </div>
+            </div>
+            <div class="question-item">
+                <div class="question-item-title flex">
+                    <span class="question-item-left">
+                        Học sinh tốt nghiệp như thế nào?
+                    </span>
+                    <span class=" question-item-right"><i class="fa-solid fa-chevron-down"></i></span>
+                </div>
+
+                <div class="question-item-answer">
+                    Học sinh sẽ chuẩn bị cho các kỳ thi IGCSE của Đại học Cambridge diễn ra vào năm 16 tuổi, sau đó là các kỳ thi A Level Quốc tế năm 18 tuổi
+                </div>
+            </div>
+            <div class="question-item">
+                <div class="question-item-title flex">
+                    <span class="question-item-left">
+                        Thời gian biểu một ngày diễn ra như thế nào? Liệu Tiếng Anh có được tích hợp xuyên suốt trong các tiết học hay con tôi sẽ học bằng tiếng Anh vào buổi sáng và tiếng Việt vào buổi chiều?
+                    </span>
+                    <span class=" question-item-right"><i class="fa-solid fa-chevron-down"></i></span>
+                </div>
+
+                <div class="question-item-answer">
+                    Chương trình giảng dạy tại ISHCMC kết hợp cả tiếng Anh và tiếng Việt. Mật độ tiết học bằng tiếng Anh sẽ tăng dần khi học sinh bước vào Trung học (95% tiếng Anh với Khối KS5) để chuẩn bị cho các kỳ thi, còn các học sinh nhỏ tuổi hơn được học tiếng Anh và tiếng Việt với thời lượng như nhau.
+                </div>
+            </div>
+            <div class="question-item">
+                <div class="question-item-title flex">
+                    <span class="question-item-left">
+                        Các bằng cấp do I trao có được công nhận và có giá trị trên toàn cầu không?
+                    </span>
+                    <span class=" question-item-right"><i class="fa-solid fa-chevron-down"></i></span>
+                </div>
+
+                <div class="question-item-answer">
+                    Có. Các kỳ thi của Đại học Cambridge được tổ chức tại hơn 100 quốc gia và được tất cả các trường đại học hàng đầu trên thế giới chấp nhận.
+                </div>
+            </div>
+            <div class="question-item">
+                <div class="question-item-title flex">
+                    <span class="question-item-left">
+                        Con tôi có thể xin hỗ trợ học tập không?
+                    </span>
+                    <span class=" question-item-right"><i class="fa-solid fa-chevron-down"></i></span>
+                </div>
+
+                <div class="question-item-answer">
+                    Nhà trường hỗ trợ học tập cho các em học sinh gặp chút khó khăn trong học tập. Nhà trường còn có các bộ phận Hỗ trợ tiếng Anh (EAL) và Hỗ trợ tiếng Việt (VAL) cho những em học sinh có nhu cầu được hỗ trợ ngôn ngữ ở giai đoạn đầu, và việc hỗ trợ này là không thu phí.
+                </div>
+            </div>
+            
         </div>
     </section>
 
