--- a/tintuc.html
+++ b/tintuc.html
@@ -111,7 +111,147 @@
 
     <section>
         <div class="events">
-            
+            <div class="news-title">
+                Sự kiện
+            </div>
+            <div class="events-list flex ">
+                <div class="events-item-wrapper">
+
+                    <div class="events-item">
+                        <div class="events-item-img">
+                            <img src="./assets/img/news-events/events-1.webp" alt="">
+                        </div>
+                        <div class="events-item-body">
+                            <div class="events-item-title">
+                                Hành trình 4 ngày khám phá thiên nhiên hùng vỹ và phát triển kỹ năng sinh tồn tại Quảng Bình
+                            </div>
+                            <div class=" events-time news-item-time">
+                                <i class="fa-solid fa-clock"></i>
+                                <span>
+                                    10-08-2022
+                                </span>
+                            </div>
+                            <div class="events-item-desc">
+                                Sau 5 tuần học tập, trau dồi tiếng Anh và bồi dưỡng năng khiếu chuyên sâu tại VAS Summer Camp 2022, các VASERs đã chính thức khởi hành chuyến dã ngoại khám phá kỳ quan thiên nhiên nổi tiếng tại Quảng Bình với nhiều hoạt động thú vị và thử thách đang chờ phía trước.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="events-item-wrapper">
+
+                    <div class="events-item">
+                        <div class="events-item-img">
+                            <img src="./assets/img/news-events/events-2.webp" alt="">
+                        </div>
+                        <div class="events-item-body">
+                            <div class="events-item-title">
+                                Chương trình Ưu đãi tuyển sinh tháng 07/2022
+                            </div>
+                            <div class=" events-time news-item-time">
+                                <i class="fa-solid fa-clock"></i>
+                                <span>
+                                    18-07-2022
+                                </span>
+                            </div>
+                            <div class="events-item-desc">
+                                 Tháng 7 này, VAS trân trọng gửi đến quý phụ huynh và các em học sinh nhiều chương trình ưu đãi hấp dẫn cùng các quà tặng thiết thực và ý nghĩa khi đăng ký và đóng học phí năm học 202
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="events-item-wrapper">
+
+                    <div class="events-item">
+                        <div class="events-item-img">
+                            <img src="./assets/img/news-events/events-3.webp" alt="">
+                        </div>
+                        <div class="events-item-body">
+                            <div class="events-item-title">
+                                Ưu đãi học phí hấp dẫn khi đăng ký ghi danh theo nhóm 5 học sinh tại VAS – Môi trường học tập chuẩn quốc tế Cambridge nhất tại TPHCM!
+                            </div>
+                            <div class=" events-time news-item-time">
+                                <i class="fa-solid fa-clock"></i>
+                                <span>
+                                    13-07-2022
+                                </span>
+                            </div>
+                            <div class="events-item-desc">
+                                Đồng hành và chắp cánh cho thế hệ công dân toàn cầu tương lai hội nhập với thế giới, VAS mang đến cơ hội để học sinh được học tập, phát triển bản thân tốt nhất trong môi trường giáo dục chuẩn quốc tế với mức 
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="events-item-wrapper">
+
+                    <div class="events-item">
+                        <div class="events-item-img">
+                            <img src="./assets/img/news-events/events-4.webp" alt="">
+                        </div>
+                        <div class="events-item-body">
+                            <div class="events-item-title">
+                                VAS Summer Fair 2022 – Lễ hội mùa hè được mong chờ nhất tại VAS!
+                            </div>
+                            <div class=" events-time news-item-time">
+                                <i class="fa-solid fa-clock"></i>
+                                <span>
+                                    12-07-2022
+                                </span>
+                            </div>
+                            <div class="events-item-desc">
+                                Sau 5 tuần trải nghiệm các hoạt động phong phú tại Trại hè VAS 2022, Hội chợ tổng kết hè với chủ đề “Thám hiểm rừng xanh” dành cho tất cả phụ huynh và học sinh trong và ngoài VAS sẽ mang đến những thử thách hấp dẫn về thể lực, trí lực, nghệ thuật và năng khiếu, cũng như tiếp thêm năng lượng để các trại sinh lớp 5-10 sẵn sàng bước vào hành trình khám phá 4 ngày 3 đêm tại Hội An – Đà Nẵng và Quảng Bình tuần tới!
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="events-item-wrapper">
+
+                    <div class="events-item">
+                        <div class="events-item-img">
+                            <img src="./assets/img/news-events/events-5.webp" alt="">
+                        </div>
+                        <div class="events-item-body">
+                            <div class="events-item-title">
+                                Gieo mầm tốt cho con với những câu chuyện giáo dục nhiệm màu của thầy giáo VAS
+                            </div>
+                            <div class=" events-time news-item-time">
+                                <i class="fa-solid fa-clock"></i>
+                                <span>
+                                    08-07-2022
+                                </span>
+                            </div>
+                            <div class="events-item-desc">
+                                Thầy Michael Brown, giáo viên Mầm non cơ sở VAS Sala, với mong muốn truyền đạt nội dung giảng dạy cho các con bằng cách dễ hiểu và thú vị nhất, đã tự mình sáng tạo nên những nhân vật truyện tranh vô cùng độc đáo với thế giới cổ tích đầy sắc màu. Với tâm huyết của mình, mỗi bài giảng của thầy đã trở thành một chuyến phiêu lưu nhiệm màu mà ở đó các con được thỏa sức sáng tạo và tiếp thu những kiến thức quan trọng đầu đời. 
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="events-item-wrapper">
+
+                    <div class="events-item">
+                        <div class="events-item-img">
+                            <img src="./assets/img/news-events/events-6.webp" alt="">
+                        </div>
+                        <div class="events-item-body">
+                            <div class="events-item-title">
+                                Theo chân các VASERs khám phá miền Tây sông nước!
+                            </div>
+                            <div class=" events-time news-item-time">
+                                <i class="fa-solid fa-clock"></i>
+                                <span>
+                                    07-07-2022
+                                </span>
+                            </div>
+                            <div class="events-item-desc">
+                                Mùa hè trong bạn có gì? Với các VASERs, mùa hè không chỉ được học tập, vui chơi làm điều mình thích mà còn được trải nghiệm những chuyến dã ngoại thực hành lý thú. Và điểm đến lần này là chuyến đi Tiền Giang - Bến Tre - quê hương của những hàng dừa xanh ngát.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
