--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <link rel="stylesheet" href="./assets/css/base.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Quicksand:wght@300&display=swap" rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 <link rel="shortcut icon" href="./assets/img/logo/logo.png">
 <title> Trang Chủ-Trường Quốc tế Sài Gòn</title>
 </head>
@@ -25,10 +24,10 @@
                 </div>
                 <div class="header-nav">
                     <ul class="header-nav-list">
-                        <li class="header-nav-item"><a href="" class="header-nav-item-link">Trang Chủ</a></li>
+                        <li class="header-nav-item"><a href="./index.html" class="header-nav-item-link">Trang Chủ</a></li>
                         <li class="header-nav-item"><a href="./chuongtrinhhoc.html" class="header-nav-item-link">Chương Trình Học </a></li>
                         <li class="header-nav-item"><a href="./tuyensinh.html" class="header-nav-item-link">Tuyển Sinh</a></li>
-                        <li class="header-nav-item"><a href="" class="header-nav-item-link">Liên hệ-Hỗ Trợ</a></li>
+                        <li class="header-nav-item"><a href="./tintuc.html" class="header-nav-item-link">Tin tức & Sự kiện</a></li>
                     </ul>
                 </div>
                 <div class="header-right">
