--- a/tintuc.html
+++ b/tintuc.html
@@ -256,7 +256,62 @@
     </section>
 
     <footer>
+        <div class="footer flex">
+            <div class="footer-logo">
+                <img src="./assets/img/logo/logo.png" alt="">
+            </div>
+            <div class="footer-contact">
+            <div class="contact">
+                <ul>
+                    <li>Văn phòng Tuyển sinh:</li>
+                    <li>10 Võ Văn Tần, Phường Võ Thị Sáu, Quận 03,Tp. Hồ Chí Minh</li>
+                    <li>Tel: <a href="">(098) 555.12.156</a></li>
+                    <li>Email: <a href="">info@ishcmc.edu.vn</a></li>
+                </ul>
+            </div>
+            <div class="social-network">
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-youtube"></i>
+                <i class="fa-brands fa-linkedin"></i>
+            </div>
+            </div>
+            <div class="footer-menu-1 flex">
+               <div class="menu-1-section">
+                <i class="fa-solid fa-school"></i>
+                <div>CƠ SỞ NHÀ TRƯỜNG </div>
+               </div>
+               <div class="menu-1-section">
+                <i class="fa-solid fa-comments"></i>
+                <div>ĐĂNG KÍ TƯ VẤN </div>
+               </div>
+               <div class="menu-1-section">
+                <i class="fa-solid fa-clipboard-list"></i>
+                <div>TUYỂN SINH</div>
+               </div>
+            </div>
+            <div class="footer-menu-2">
+                <ul class="menu-item">
+                    <li>LỘ TRÌNH HỌC TẬP</li>
+                    <li>BẬC TIỂU HỌC</li>
+                    <li>BẬC TRUNG HỌC CƠ SỞ</li>
+                    <li>BẬC TRUNG HỌC PHỔ THÔNG</li>
+                </ul>
+            </div>
 
+            <div class="footer-menu-3">
+                <ul class="menu-item">
+                    <li>BẰNG TÚ TÀI ÚC – SACE</li>
+                    <li>TÀI CHÍNH GIÁO DỤC</li>
+                    <li>HỌC BỔNG TÀI NĂNG</li>
+                    <li>LIÊN HỆ & HỖ TRỢ</li>
+                </ul>
+            </div>
+            <div class="license flex">
+                <i class="fa-solid fa-copyright"></i>
+                <p>Copyright 2017. EMASI Schools. All rights reserved</p>
+            </div>
+        </div>
+    </div>
 
     </footer>
 
