--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="app">
         <div class="header">
             <div class="header-scroll">
-                <div class="header-wrapped full-width fixed">
+                <div class="header-wrapped full-width">
                     <div class="header-logo">
                         <a href="#" class="header-logo-link">
                             <img src="./assets/img/logo/logo-ngang.png" alt="" class="header-logo-img">
