--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./assets/css/responsive.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <link rel="shortcut icon" href="./assets/img/logo/logo.png">
 <title> Trang Chủ-Trường Quốc tế Sài Gòn</title>
@@ -19,9 +20,19 @@
         <div class="header">
             <div class="header-scroll">
                 <div class="header-wrapped full-width">
+                    <div class="mobile-menu">
+                        <a href="#" class="mobile-menu-link">
+                            <i class="fa-solid fa-bars"></i> MENU
+                        </a>
+                    </div>
                     <div class="header-logo">
                         <a href="#" class="header-logo-link">
                             <img src="./assets/img/logo/logo-ngang.png" alt="" class="header-logo-img">
+                        </a>
+                    </div>
+                    <div class="header-logo-mobile">
+                        <a href="#" class="header-logo-mobile-link">
+                            <img src="./assets/img/logo/logo.png" alt="" class="header-logo-img">
                         </a>
                     </div>
                     <div class="header-nav">
